src/main/java/oo/solid/isp/sample/good/Telefonia.java
package oo.solid.isp.sample.good;

public interface Telefonia {
    void tocar();
    void discar();
}
