src/main/java/oo/solid/isp/sample/bad/Telefone.java
package oo.solid.isp.sample.bad;

public interface Telefone {
    void tocar();
    void discar();
    void tirarFoto();
}
